# resonant-worlds-explorer

./: API_INTEGRATION_GUIDE.md  BACKEND_SUMMARY.md  BIOSIGNATURE_DETECTION.md  CAN_WE_FIND_PLANETS.md  CONTRIBUTING.md  CONTROL_VALIDATION_REPORT.md  DISCOVERY_PLAN.md  DISCOVERY_SCAN_SUMMARY.md  FINAL_DELIVERY.md  FINAL_HANDOFF.md  FINAL_INTEGRATION_SUMMARY.md  FRONTEND_INTEGRATION.md  GETTING_STARTED.md  GETTING_STARTED_DISCOVERY.md  METHODOLOGY_VALIDATION.md  MISSION_COMPLETE.md  MODULUS_COMPLETE.md  MODULUS_NASA_INTEGRATION.md  NASA_SPACE_APPS_CHALLENGE.md  NOVEL_DISCOVERY_ASSESSMENT.md  PRODUCTION_STATUS.md  PROJECT_COMPLETE.md  PROJECT_STATS.txt  README.md  RESEARCH_PAPER.md  START_HERE.md  START_HERE_NOW.md  SYSTEM_COMPLETE.md  WHAT_WORKS_NOW.md  index.html  server.py  system_overview.py  tailwind.config.ts  test_integration.sh
backend/: .gitignore  ARCHITECTURE.md  CHECKLIST.md  DATA_SOURCES.md  Dockerfile  MODULUS_BIOSIGNATURE_DEBUG_STATUS.md  MODULUS_INTEGRATION_PLAN.md  QUICKSTART.md  QUICK_START_DEBUGGING.sh  README.md  biosignature_batch.json  biosignature_results.json  debug_batch_output.json  debug_test_output.json  discovery_scan_results.json  docker-compose.yml  install.sh  pyproject.toml  quick_test.py  requirements.txt  run_demo.py  run_discovery_scan.py  run_real_detection.py  scan_jwst_real.json  scan_kepler.json  scan_published_real.json  simple_test.py  test_biosignatures.py  test_exoplanet_archive.py  test_full_integration.py
backend/api/: __init__.py  main.py
backend/core/: __init__.py  biosignature_ingest.py  biosignature_modulus_workflow.py  (+13 more)
(+118 files in other folders)
