[project]
name = "resonant-worlds-backend"
version = "0.1.0"
description = "Backend API for Resonant Worlds Explorer with local Modulus integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "astropy>=6.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "weasyprint>=60.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "physics/modulus_real",
    "scripts",
    "assets",
]
